# db/models/group.go
@@ -1,9 +1,15 @@
 package models
 
-import "gorm.io/gorm"
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
 
 type Group struct {
-	gorm.Model
-	ID   uint   `gorm:"primarykey"`
-	Name string `gorm:"size:255;unique"`
+	ID        uint   `gorm:"primarykey"`
+	Name      string `gorm:"size:255;unique"`
+	CreatedAt time.Time
+	UpdatedAt time.Time
+	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"`
 }
